package com.HailoOSS.service.provisioning.create;

message Request {
	required string serviceName = 1;
	required uint64 serviceVersion = 2;
	required string machineClass = 3;
	optional uint64 noFileSoftLimit = 4;
	optional uint64 noFileHardLimit = 5;
}

message Response {
}
